# TravelAgentApp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/agents/: mind.py  observer.py  planner.py
app/api/: routes.py
app/bus/: base.py  in_memory.py  nats_bus.py
app/connectors/: observer_sources.py
app/core/: config.py  tracing.py
app/domain/: auth_models.py  events.py  models.py  scoring.py
app/security/: auth.py  rate_limit.py
app/services/: orchestrator.py
app/state/: memory.py  postgres.py  repository.py
app/web/: routes.py
app/web/ui/: index.html
mobile-app/: App.tsx  README.md  app.json  package-lock.json  package.json  tsconfig.json
mobile-app/src/components/: AlertItem.tsx  AppContainer.tsx  SectionCard.tsx  TripCard.tsx
mobile-app/src/navigation/: RootNavigator.tsx  navigationRef.ts  types.ts
mobile-app/src/screens/: HomeScreen.tsx  NewTripScreen.tsx  ProfileScreen.tsx  SignInScreen.tsx
mobile-app/src/services/: api.ts  authService.ts  notifications.ts  storage.ts  tripService.ts  types.ts
mobile-app/src/store/: authStore.ts  uiStore.ts
mobile-app/src/theme/: colors.ts
scripts/: dev_all.sh  mobile_start.sh
tests/: test_api.py  test_bus_resilience.py  test_ops_endpoints.py  test_scoring.py
